# voice-multimodal-assistants

./: .gitignore  LICENSE  README.md
ai-job-market-copilot-ollama/: .env.example  .gitignore  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  pyproject.toml
ai-job-market-copilot-ollama/app/: streamlit_app.py
ai-job-market-copilot-ollama/artifacts/: ai_jobs_enriched.parquet  jobs_ai_candidates.parquet  jobs_normalized.parquet  jobs_scored.parquet  metrics.json
ai-job-market-copilot-ollama/artifacts/charts/: ai_roles_by_source.html  role_family_mix.html  top_skills.html
ai-job-market-copilot-ollama/artifacts/reports/: job_market_report.md
ai-job-market-copilot-ollama/artifacts/tables/: ai_jobs_preview.csv  normalized_preview.csv
ai-job-market-copilot-ollama/data/raw/: remotive_jobs.json  wwr_jobs.json
ai-job-market-copilot-ollama/notebooks/: 01_data_ingestion.ipynb  02_cleaning_and_normalization.ipynb  03_ollama_enrichment.ipynb  04_market_insights_report.ipynb
ai-job-market-copilot-ollama/scripts/: run_pipeline.py
ai-job-market-copilot-ollama/src/job_market_copilot/: __init__.py  cli.py  config.py  logging_utils.py  pipeline.py  schemas.py
ai-job-market-copilot-ollama/src/job_market_copilot/analysis/: metrics.py
ai-job-market-copilot-ollama/tests/: test_enrich_fallback.py  test_normalize.py  test_relevance.py
realtime-multimodal-voice-assistant/: README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  pyproject.toml
realtime-multimodal-voice-assistant/notebooks/: realtime_multimodal_tutorial.ipynb
realtime-multimodal-voice-assistant/reports/: README.md  environment.txt  notebook-run.txt  pytest.txt  run-normal.txt  run-stress.txt  verification-report.md
realtime-multimodal-voice-assistant/src/realtime_mm/: __init__.py  cli.py  config.py  demo_inputs.py  latency.py  models.py  pipeline.py  services.py
realtime-multimodal-voice-assistant/tests/: test_pipeline.py
voice-ai-study-coach/: .env.example  .gitignore  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  pyproject.toml
voice-ai-study-coach/.github/workflows/: ci.yml
voice-ai-study-coach/artifacts/: run_summary.json
voice-ai-study-coach/artifacts/evals/: predictions.csv  summary.json
voice-ai-study-coach/artifacts/reports/: voice_study_coach_report.md
voice-ai-study-coach/artifacts/runs/: demo_sessions.json
voice-ai-study-coach/artifacts/telemetry/: summary.json  traces.jsonl
voice-ai-study-coach/data/demo_audio/: notebook_student_question.txt  student_question_1.txt  student_question_2.txt  tutorial_student_question.txt
voice-ai-study-coach/data/eval/: tasks.json
voice-ai-study-coach/data/knowledge/: data_policy.md  incident_playbook.md  release_notes_policy.md  study_tips.md  support_handbook.md
voice-ai-study-coach/notebooks/: 01_setup_and_backend_check.ipynb  02_voice_io_tutorial.ipynb  03_single_session_walkthrough.ipynb  04_evaluation.ipynb  05_telemetry_and_report.ipynb  06_full_tutorial_voice_ai_study_coach.ipynb
voice-ai-study-coach/scripts/: execute_notebooks.py  generate_notebooks.py  run_pipeline.py
voice-ai-study-coach/src/voice_study_coach/: __init__.py  cli.py  config.py  logging_utils.py  ollama_client.py  pipeline.py  schemas.py
voice-ai-study-coach/tests/: test_eval_metric.py  test_retrieval.py  test_synthesizer.py  test_telemetry.py  test_transcriber.py
(+15 files in other folders)
