[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-ai-study-coach"
version = "0.1.0"
description = "Notebook-first Voice AI study coach with local Ollama, procedural audio, telemetry, and evals"
readme = "README.md"
requires-python = ">=3.12.10,<3.13"
authors = [{ name = "Ahmad Mujtaba" }]
license = "MIT"
dependencies = [
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "typer>=0.26.7",
]

[project.scripts]
voice-study-coach = "voice_study_coach.cli:app"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
pretty = true
mypy_path = "src"
